# arc_prometheus

./: .gitignore  .pre-commit-config.yaml  ANALYST_INTEGRATION_RESULTS.md  BASELINE_ANALYSIS_2025-11-03.md  CLAUDE.md  ENSEMBLE_TEST_RESULTS.md  INVESTIGATION_FINDINGS.md  Makefile  README.md  SESSION_HANDOVER_2025-11-03.md  benchmark_tasks.txt  coverage.xml  kickoff.md  plan_20251024.md  plan_20251029.md  plan_20251031.md  plan_20251101.md  plan_20251102.md  plan_phase4_validation_first.md  plan_phase4b_distillation.md  prompt_analysis.md  pyproject.toml  requirements.txt  situation_20251102.md
.github/hooks/: pre-push
.github/workflows/: ci.yml
docker/: sandbox.Dockerfile
docs/: kaggle_model_setup.md  kaggle_testing_learnings.md
docs/benchmarks/: multiprocess_baseline.md  phase2_findings.md
notebooks/: KAGGLE_CELL_5_AGENTS.md  KAGGLE_NOTEBOOK_CELLS.md  kaggle_submission.ipynb
results/: .gitkeep  EXPERIMENT_STATUS.md  POPULATION_ANALYSIS.md  ai_civ_baseline_comparison.md  test_improved_prompts_output.txt
results/debug_truncation_fix/: metadata.json  summary.json  task_a25697e4.json
results/evaluation_validation/: metadata.json  summary.json  task_13e47133.json  task_247ef758.json  task_a25697e4.json
results/gemini_ai_civilization/: metadata.json  summary.json  task_13e47133.json  task_221dfab4.json  task_247ef758.json  task_28a6681f.json  task_3a25b0d8.json  task_409aa875.json  task_4c3d4a41.json  task_a25697e4.json  task_aa4ec2a5.json  task_bf45cf4b.json
results/gemini_baseline_quick/: metadata.json  summary.json  task_13e47133.json  task_221dfab4.json  task_247ef758.json  task_28a6681f.json  task_3a25b0d8.json  task_409aa875.json  task_4c3d4a41.json  task_a25697e4.json  task_aa4ec2a5.json  task_bf45cf4b.json
results/multiprocess_baseline/: metadata.json  summary.json  task_00576224.json  task_007bbfb7.json  task_025d127b.json  task_045e512c.json  task_0520fde7.json  task_05269061.json  task_05a7bcf2.json  task_0607ce86.json  task_06df4c85.json  task_070dd51e.json  task_08ed6ac7.json  task_09629e4f.json  task_09c534e7.json  task_0a1d4ef5.json  task_0bb8deee.json
results/pass2_test_3tasks/: metadata.json  submission.json  summary.json  task_00576224.json  task_007bbfb7.json  task_025d127b.json
results/pop_exp1_low_low/: metadata.json  summary.json  task_291dc1e1.json  task_2d0172a1.json  task_7b3084d4.json  task_b5ca7ac4.json  task_cbebaa4b.json
results/pop_exp2_high_low/: metadata.json  summary.json  task_291dc1e1.json  task_2d0172a1.json  task_7b3084d4.json  task_b5ca7ac4.json  (+1 more)
scripts/: analyze_baseline.py  analyze_benchmark.py  benchmark_ensemble.py  benchmark_evolution.py  check_ci.sh  create_kaggle_notebook.py  demo_phase1_1_data.py  demo_phase1_2_manual.py  demo_phase1_3_sandbox.py  demo_phase1_4_llm.py  demo_phase2_1_fitness.py  demo_phase2_2_refiner.py  demo_phase2_3_evolution.py  demo_population_evolution.py  download_codegemma.py  prepare_evaluation_data.py  run_phase1_test.py  setup_hooks.sh  test_analyst_programmer_pipeline_real_api.py  test_analyst_real_api.py  test_kaggle_notebook_local.py  test_tagger_real_api.py
tests/: __init__.py  conftest.py  test_active_inference_integration.py  test_analyst.py  test_analyst_programmer_integration.py  test_analyze_baseline.py  test_augmentation.py  test_benchmark_evolution.py  test_cli_config.py  test_crossover.py  test_data_loader.py  test_docker_sandbox.py  test_e2e_pipeline.py  test_error_classifier.py  test_evaluator.py  test_evolution_loop.py  test_fitness.py  test_llm_cache.py  test_manual_solver.py  test_multi_persona_analyst.py  test_multi_solution_programmer.py  test_population_evolution.py  test_prepare_evaluation_data.py  test_programmer.py  test_refiner.py  test_sandbox.py  test_solver_library.py  test_submission_formatter.py  test_synthesis_agent.py  test_tagger.py  test_tagger_integration.py  test_test_time_ensemble.py
(+58 files in other folders)
